Add archive perspective

--- a/src/configs/portalConfig.json
+++ b/src/configs/portalConfig.json
@@ -5,6 +5,7 @@
         "searchPerspectives": [
             "letters",
             "actors",
+            "fonds",
             "places",
             "fullTextSearch"
         ],
