--- a/src/configs/portalConfig.json
+++ b/src/configs/portalConfig.json
@@ -55,7 +55,7 @@
         "topBar": {
             "logoTextTransform": "none",
             "showLanguageButton": false,
-            "feedbackLink": "https://link.webropolsurveys.com/...",
+            "feedbackLink": "https://link.webropolsurveys.com/S/21E30E313885D6AF",
             "externalInstructions": true,
             "externalAboutPage": true,
             "reducedHeight": 44,
