--- a/src/configs/portalConfig.json
+++ b/src/configs/portalConfig.json
@@ -105,7 +105,7 @@
         "yasguiParams": {
             "contentTypeConstruct": "text/turtle",
             "contentTypeSelect": "application/sparql-results+json",
-            "endpoint": "https://ldf.fi/coco/sparql",
+            "endpoint": "https://ldf.fi/coco-dev/sparql",
             "requestMethod": "POST",
             "tabTitle": "Exported query"
         }
