Add proxy instance pages

--- a/src/configs/portalConfig.json
+++ b/src/configs/portalConfig.json
@@ -10,9 +10,10 @@
             "fullTextSearch"
         ],
         "onlyInstancePages": [
-            "ties",
+            "proxies",
+            "metrics",
             "sources",
-            "metrics"
+            "ties"
         ]
     },
     "localeConfig": {
