--- a/src/configs/portalConfig.json
+++ b/src/configs/portalConfig.json
@@ -10,6 +10,7 @@
             "fullTextSearch"
         ],
         "onlyInstancePages": [
+            "occupations",
             "proxies",
             "metrics",
             "sources",
