--- a/src/configs/portalConfig.json
+++ b/src/configs/portalConfig.json
@@ -7,6 +7,10 @@
             "actors",
             "fonds",
             "places",
+            "snellmanedition",
+            "lonnrotedition",
+            "topeliusedition",
+            "runebergedition",
             "fullTextSearch"
         ],
         "onlyInstancePages": [
