Initialize fifth perspective view

--- a/src/configs/portalConfig.json
+++ b/src/configs/portalConfig.json
@@ -7,6 +7,7 @@
             "actors",
             "fonds",
             "places",
+            "contributors",
             "edelfeltedition",
             "lonnrotedition",
             "snellmanedition",
