Add page for data statistics

--- a/src/configs/portalConfig.json
+++ b/src/configs/portalConfig.json
@@ -77,6 +77,11 @@
                     "externalLink": true,
                     "translatedUrl": "aboutTheProjectUrl",
                     "translatedText": "aboutTheProject"
+                },
+                {
+                    "id": "statistics",
+                    "translatedText": "dataStatistics",
+                    "internalLink": "/statistics"
                 }
             ]
         },
