--- a/src/configs/portalConfig.json
+++ b/src/configs/portalConfig.json
@@ -60,7 +60,7 @@
         "paginationToolbarHeight": 37,
         "tableFontSize": "0.8rem",
         "topBar": {
-            "logoImage": "logos/CoCo_logo.png",
+            "logoImage": "logos/CoCo_brandmark_black.png",
             "logoImageHeight": 64,
             "logoImageReducedHeight": 44,
             "logoTextTransform": "none",
@@ -68,8 +68,8 @@
             "feedbackLink": "https://link.webropolsurveys.com/S/21E30E313885D6AF",
             "externalInstructions": true,
             "externalAboutPage": true,
-            "reducedHeight": 44,
-            "defaultHeight": 64,
+            "reducedHeight": 56,
+            "defaultHeight": 76,
             "mobileMenuBreakpoint": 1360,
             "infoDropdown": [
                 {
