Add instance page only perspective for digital editions

--- a/src/configs/portalConfig.json
+++ b/src/configs/portalConfig.json
@@ -19,7 +19,8 @@
             "proxies",
             "metrics",
             "sources",
-            "ties"
+            "ties",
+            "digitaleditions"
         ]
     },
     "localeConfig": {
